# appsignals-mcp

./: .gitignore  LOGGING.md  README.md  claude_desktop_config.json  mcp.json  pyproject.toml  server.py  server2.py
appsignals/: appsignals.py  main.py  pyproject.toml
appsignals/appsignals.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
aws-cw-appsignals-mcp-server/: aws_clients.py  server.py  tools.py  utils.py
src/mcp_server_appsignals/: __init__.py  __main__.py  aws_client.py  server.py  sli_report_client.py  tools.py
src/mcp_server_appsignals/data/: sli_req.json  sli_resp.json
tests/: test_server.py
weather/: pyproject.toml
